--- a/index.html
+++ b/index.html
@@ -5,8 +5,277 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header>
+      <a>
+        <img src="https://via.placeholder.com/108x18.png/EE3643/FFFFFF/" width="108" height="18" alt="Логотип магазина «Техномарт»">
+      </a>
+      <!-- Здесь будет форма/инпут поиска -->
+      <a href="blank.html">Закладки: 0</a>
+      <a href="blank.html">Корзина: 0</a>
+      <a href="blank.html">Оформить заказ</a>
+      <section>
+        <h2>О нас</h2>
+        <i>Интернет-магазин<br>
+          строительных материалов<br>
+          и инструментов для ремонта</i>
+      </section>
+      <section>
+        <h2>Контактная информация</h2>
+        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+        <p>г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
+      </section>
+      <section>
+        <h2>Личный кабинет</h2>
+        <a href="blank.html">Войти</a>
+        <a href="blank.html">Регистрация</a>
+      </section>
+      <nav>
+        <ul>
+          <li><a>Главная</a></li>
+          <li><a href="blank.html">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="blank.html">Новости</a></li>
+          <li><a href="blank.html">Спецпредложения</a></li>
+          <li><a href="blank.html">Доставка</a></li>
+          <li><a href="blank.html">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Интернет-магазин «Техномарт»</h1>
+      <section>
+        <h2>Предложения</h2>
+        <ul>
+          <li>
+            <p>new</p>
+            <h3>Материалы</h3>
+            <a href="blank.html">На любой вкус</a>
+          </li>
+          <li>
+            <p></p>
+            <h3>Инструмент</h3>
+            <a href="blank.html">На все случаи</a>
+          </li>
+          <li>
+            <p></p>
+            <h3>Техника</h3>
+            <a href="blank.html">Для стройки</a>
+          </li>
+          <li>
+            <p></p>
+            <h3>Скидка 50%</h3>
+            <a href="blank.html">На 350 товаров</a>
+          </li>
+          <li>
+            <p></p>
+            <h3>Доставка</h3>
+            <a href="blank.html">Бесплатно</a>
+          </li>
+        </ul>
+        <figure>
+          <a href="#">
+            <img src="https://via.placeholder.com/620x266.png/EE3643/FFFFFF/" width="620" height="266" alt="Перфораторы">
+          </a>
+          <figcaption>
+            <h4>Перфораторы</h4>
+            <p>Настоящие мужские игрушки</p>
+          </figcaption>
+        </figure>
+        <button type="button" disabled><</button>
+        <button type="button">></button>
+        <a href="catalog.html">Открыть каталог</a>
+      </section>
+      <section>
+        <h2>Популярные товары:</h2>
+        <a href="blank.html">Все популярные товары</a>
+        <ul>
+          <li>
+            <article>
+              <p></p>
+              <p>
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 9000">
+              </p>
+              <h3>Перфоратор BOSCH BFG 9000</h3>
+              <p>32500 Р.</p>
+              <a href="blank.html">25500 Р.</a>
+            </article>
+          </li>
+          <li>
+            <article>
+              <p>new</p>
+              <p>
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+              </p>
+              <h3>Перфоратор BOSCH BFG 3000</h3>
+              <p>22500 Р.</p>
+              <a href="blank.html">15500 Р.</a>
+            </article>
+          </li>
+          <li>
+            <article>
+              <p></p>
+              <p>
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+              </p>
+              <h3>Перфоратор BOSCH BFG 2000</h3>
+              <p>30500 Р.</p>
+              <a href="blank.html">25500 Р.</a>
+            </article>
+          </li>
+          <li>
+            <article>
+              <p>new</p>
+              <p>
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 9000">
+              </p>
+              <h3>Перфоратор BOSCH BFG 9000</h3>
+              <p></p>
+              <a href="blank.html">12500 Р.</a>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Популярные производители:</h2>
+        <a href="blank.html">Все производители</a>
+        <ul>
+          <li>
+            <a href="blank.html">
+              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="BOSCH">
+            </a>
+          </li>
+          <li>
+            <a href="blank.html">
+              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="Makita">
+            </a>
+          </li>
+          <li>
+            <a href="blank.html">
+              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="DeWALT">
+            </a>
+          </li>
+          <li>
+            <a href="blank.html">
+              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="Интерскол">
+            </a>
+          </li>
+          <li>
+            <a href="blank.html">
+              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="Hitachi">
+            </a>
+          </li>
+          <li>
+            <a href="blank.html">
+              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="LG">
+            </a>
+          </li>
+          <li>
+            <a href="blank.html">
+              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="AEG">
+            </a>
+          </li>
+          <li>
+            <a href="blank.html">
+              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="Metabo">
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Сервисы</h2>
+        <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        <ul>
+          <li><button type="button">Доставка</button></li>
+          <li><button type="button">Гарантия</button></li>
+          <li><button type="button">Кредит</button></li>
+        </ul>
+        <section>
+          <h3>Доставка</h3>
+          <p>Мы с удовольствием доставим ваш товар прямо<br>
+          к вашему подъезду совершенно бесплатно!<br>
+          Ведь мы неплохо заработаем,<br>
+          поднимая его на ваш этаж!</p>
+        </section>
+      </section>
+      <section>
+        <h2>Компания «Техномарт»</h2>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a href="blank.html">Подробнее о компании</a>
+      </section>
+      <section>
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+        <p>
+          <a href="blank.html">
+            <img src="https://via.placeholder.com/300x158.png/EE3643/FFFFFF/" width="300" height="158" alt="Карта">
+          </a>
+        </p>
+        <a href="blank.html">Заблудились? Напишите нам!</a>
+      </section>
+    </main>
+    <footer>
+      <section>
+        <h2>Как нас найти</h2>
+        <a>
+          <img src="https://via.placeholder.com/220x68.png/EE3643/FFFFFF/" width="220" height="68" alt="Логотип магазина «Техномарт»">
+        </a>
+        <p>
+          г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+        </p>
+      </section>
+      <section>
+        <h2>Навигационные ссылки</h2>
+        <ul>
+          <li><a href="blank.html">Компания</a></li>
+          <li><a href="blank.html">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="blank.html">Доставка</a></li>
+          <li><a href="blank.html">Контакты</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Промо-ссылки</h2>
+        <ul>
+          <li><a href="blank.html">Материалы</a></li>
+          <li><a href="blank.html">Техника</a></li>
+          <li><a href="blank.html">Инструмент</a></li>
+          <li><a href="blank.html">Спецпредложения</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Авторские права</h2>
+        <p>© 2010–2019 Компания «Техномарт»<br>
+          Все права защищены</p>
+      </section>
+      <section>
+        <h2>Социальные сети</h2>
+        <ul>
+          <li>
+            <a href="#">Вконтакте</a>
+          </li>
+          <li>
+            <a href="#">Фейсбук</a>
+          </li>
+          <li>
+            <a href="#">Инстаграм</a>
+          </li>
+        </ul>
+      </section>
+      <p>
+        Обратная связь:
+        <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      </p>
+      <p>
+        Разработано —
+        <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+      </p>
+    </footer>
   </body>
 </html>
