--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <p>Настоящие мужские игрушки</p>
           </figcaption>
         </figure>
-        <button type="button" disabled><</button>
-        <button type="button">></button>
+        <button type="button" disabled>Назад</button>
+        <button type="button">Вперед</button>
         <a href="catalog.html">Открыть каталог</a>
       </section>
       <section>
