Добавлена шапка сайта
Ссылкам на главную добавлен атрибут href с адресом страницы, у каталога, наоборот, атрибут убран. Вид личного кабинета изменен на вид авторизованного пользователя.

--- a/catalog.html
+++ b/catalog.html
@@ -4,4 +4,46 @@
     <meta charset="utf-8">
     <title>Каталог — HTML Academy: Техномарт</title>
   </head>
+  <body>
+    <header>
+      <a href="index.html">
+        <img src="https://via.placeholder.com/108x18.png/EE3643/FFFFFF/" width="108" height="18" alt="Логотип магазина «Техномарт»">
+      </a>
+      <!-- Здесь будет форма/инпут поиска -->
+      <a href="blank.html">Закладки: 0</a>
+      <a href="blank.html">Корзина: 10</a>
+      <a href="blank.html">Оформить заказ</a>
+      <section>
+        <h2>О нас</h2>
+        <i>Интернет-магазин<br>
+          строительных материалов<br>
+          и инструментов для ремонта</i>
+      </section>
+      <section>
+        <h2>Контактная информация</h2>
+        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+        <p>г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
+      </section>
+      <section>
+        <h2>Личный кабинет</h2>
+        <p>Равшан Джамшутович</p>
+        <a href="blank.html">Выйти</a>
+        <ul>
+          <li><a href="blank.html">Мои заказы</a></li>
+          <li><a href="blank.html">Личный кабинет</a></li>
+        </ul>
+      </section>
+      <nav>
+        <ul>
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="blank.html">Компания</a></li>
+          <li><a>Каталог</a></li>
+          <li><a href="blank.html">Новости</a></li>
+          <li><a href="blank.html">Спецпредложения</a></li>
+          <li><a href="blank.html">Доставка</a></li>
+          <li><a href="blank.html">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
