--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,7 @@
         <ul>
           <li><a href="index.html">Главная</a></li>
           <li><a href="blank.html">Компания</a></li>
-          <li><a>Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="blank.html">Новости</a></li>
           <li><a href="blank.html">Спецпредложения</a></li>
           <li><a href="blank.html">Доставка</a></li>
@@ -45,5 +45,21 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <ul>
+        <li>
+          <a href="index.html">Главная</a>
+        </li>
+        <li>
+          <a href="catalog.html">Каталог</a>
+        </li>
+        <li>
+          <a href="blank.html">Инструмент</a>
+        </li>
+        <li>
+          Перфораторы
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
