Добавлена заготовка для формы фильтрации товаров

--- a/catalog.html
+++ b/catalog.html
@@ -60,6 +60,11 @@
           Перфораторы
         </li>
       </ul>
+      <h1>Перфораторы</h1>
+      <section>
+        <h2>Фильтр</h2>
+        <!-- Здесь будет форма фильтра -->
+      </section>
     </main>
   </body>
 </html>
