Добавлена заготовка для формы сортировки
Пока предположительно помечаю это формой (часто вижу сортировку выпадающим списком, к которому подключен скрипт), но иногда попадалось оформление ссылками. Скрипт нужен в любом случае, но вариант с формой мне кажется проще.

--- a/catalog.html
+++ b/catalog.html
@@ -62,8 +62,12 @@
       </ul>
       <h1>Перфораторы</h1>
       <section>
-        <h2>Фильтр</h2>
+        <h2>Фильтр:</h2>
         <!-- Здесь будет форма фильтра -->
+      </section>
+      <section>
+        <h2>Сортировка:</h2>
+        <!-- Здесь будет форма сортировки -->
       </section>
     </main>
   </body>
