--- a/catalog.html
+++ b/catalog.html
@@ -69,6 +69,110 @@
         <h2>Сортировка:</h2>
         <!-- Здесь будет форма сортировки -->
       </section>
+      <section>
+        <h2>Список перфораторов</h2>
+        <ul>
+          <li>
+            <article>
+              <p></p>
+              <p>
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+              </p>
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <p>30500 Р.</p>
+              <a href="blank.html">25500 Р.</a>
+            </article>
+          </li>
+          <li>
+            <article>
+              <p></p>
+              <p>
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+              </p>
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <p>30500 Р.</p>
+              <a href="blank.html">25500 Р.</a>
+            </article>
+          </li>
+          <li>
+            <article>
+              <p>new</p>
+              <p>
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+              </p>
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <p>30500 Р.</p>
+              <a href="blank.html">25500 Р.</a>
+            </article>
+          </li>
+          <li>
+            <article>
+              <p>new</p>
+              <p>
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+              </p>
+              <h3>Перфоратор BOSCH BFG 3000</h3>
+              <p>22500 Р.</p>
+              <a href="blank.html">15500 Р.</a>
+            </article>
+          </li>
+          <li>
+            <article>
+              <p></p>
+              <p>
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+              </p>
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <p>30500 Р.</p>
+              <a href="blank.html">25500 Р.</a>
+            </article>
+          </li>
+          <li>
+            <article>
+              <p>new</p>
+              <p>
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+              </p>
+              <h3>Перфоратор BOSCH BFG 2000</h3>
+              <p></p>
+              <a href="blank.html">12500 Р.</a>
+            </article>
+          </li>
+          <li>
+            <article>
+              <p>new</p>
+              <p>
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+              </p>
+              <h3>Перфоратор BOSCH BFG 3000</h3>
+              <p>22500 Р.</p>
+              <a href="blank.html">15500 Р.</a>
+            </article>
+          </li>
+          <li>
+            <article>
+              <p></p>
+              <p>
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+              </p>
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <p>30500 Р.</p>
+              <a href="blank.html">25500 Р.</a>
+            </article>
+          </li>
+          <li>
+            <article>
+              <p>new</p>
+              <p>
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+              </p>
+              <h3>Перфоратор BOSCH BFG 2000</h3>
+              <p></p>
+              <a href="blank.html">12500 Р.</a>
+            </article>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
