--- a/catalog.html
+++ b/catalog.html
@@ -172,6 +172,20 @@
             </article>
           </li>
         </ul>
+        <ul>
+          <li>
+            <a>1</a>
+          </li>
+          <li>
+            <a href="#">2</a>
+          </li>
+          <li>
+            <a href="#">3</a>
+          </li>
+          <li>
+            <a href="#">Следующая</a>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
