--- a/catalog.html
+++ b/catalog.html
@@ -195,5 +195,63 @@
           В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
       </section>
     </main>
+    <footer>
+      <section>
+        <h2>Как нас найти</h2>
+        <a href="index.html">
+          <img src="https://via.placeholder.com/220x68.png/EE3643/FFFFFF/" width="220" height="68" alt="Логотип магазина «Техномарт»">
+        </a>
+        <p>
+          г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+        </p>
+      </section>
+      <section>
+        <h2>Навигационные ссылки</h2>
+        <ul>
+          <li><a href="blank.html">Компания</a></li>
+          <li><a href="blank.html">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="blank.html">Доставка</a></li>
+          <li><a href="blank.html">Контакты</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Промо-ссылки</h2>
+        <ul>
+          <li><a href="blank.html">Материалы</a></li>
+          <li><a href="blank.html">Техника</a></li>
+          <li><a href="blank.html">Инструмент</a></li>
+          <li><a href="blank.html">Спецпредложения</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Авторские права</h2>
+        <p>© 2010–2019 Компания «Техномарт»<br>
+          Все права защищены</p>
+      </section>
+      <section>
+        <h2>Социальные сети</h2>
+        <ul>
+          <li>
+            <a href="#">Вконтакте</a>
+          </li>
+          <li>
+            <a href="#">Фейсбук</a>
+          </li>
+          <li>
+            <a href="#">Инстаграм</a>
+          </li>
+        </ul>
+      </section>
+      <p>
+        Обратная связь:
+        <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      </p>
+      <p>
+        Разработано —
+        <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+      </p>
+    </footer>
   </body>
 </html>
