--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
   </head>
-  <body>
-    <header>
-      <a>
+  <body class="page-body">
+    <header class="main-header">
+      <a class="main-header-logo">
         <img src="https://via.placeholder.com/108x18.png/EE3643/FFFFFF/" width="108" height="18" alt="Логотип магазина «Техномарт»">
       </a>
       <!-- Здесь будет форма/инпут поиска -->
-      <a href="blank.html">Закладки: 0</a>
-      <a href="blank.html">Корзина: 0</a>
-      <a href="blank.html">Оформить заказ</a>
-      <section>
+      <a class="bookmark-link" href="blank.html">Закладки: 0</a>
+      <a class="cart-link" href="blank.html">Корзина: 0</a>
+      <a class="order-link" href="blank.html">Оформить заказ</a>
+      <section class="main-header-about">
         <h2>О нас</h2>
         <i>Интернет-магазин<br>
           строительных материалов<br>
           и инструментов для ремонта</i>
       </section>
-      <section>
+      <section class="main-header-contacts">
         <h2>Контактная информация</h2>
-        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+        <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
         <p>г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
       </section>
-      <section>
+      <section class="main-header-account">
         <h2>Личный кабинет</h2>
-        <a href="blank.html">Войти</a>
-        <a href="blank.html">Регистрация</a>
+        <a class="login-link" href="blank.html">Войти</a>
+        <a class="register-link" href="blank.html">Регистрация</a>
       </section>
-      <nav>
-        <ul>
+      <nav class="main-navigation">
+        <ul class="page-navigation">
           <li><a>Главная</a></li>
           <li><a href="blank.html">Компания</a></li>
           <li><a href="catalog.html">Каталог</a></li>
@@ -41,198 +41,214 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="container">
       <h1>Интернет-магазин «Техномарт»</h1>
-      <section>
+      <section class="offers">
         <h2>Предложения</h2>
-        <ul>
-          <li>
-            <p>new</p>
+        <ul class="offers-list">
+          <li class="offer-item">
+            <p class="tag-new">new</p>
             <h3>Материалы</h3>
-            <a href="blank.html">На любой вкус</a>
+            <a class="offer-item-button" href="blank.html">На любой вкус</a>
           </li>
-          <li>
-            <p></p>
+          <li class="offer-item">
+            <p class="tag-new"></p>
             <h3>Инструмент</h3>
-            <a href="blank.html">На все случаи</a>
+            <a class="offer-item-button" href="blank.html">На все случаи</a>
           </li>
-          <li>
-            <p></p>
+          <li class="offer-item">
+            <p class="tag-new"></p>
             <h3>Техника</h3>
-            <a href="blank.html">Для стройки</a>
+            <a class="offer-item-button" href="blank.html">Для стройки</a>
           </li>
-          <li>
-            <p></p>
+          <li class="offer-item">
+            <p class="tag-new"></p>
             <h3>Скидка 50%</h3>
-            <a href="blank.html">На 350 товаров</a>
+            <a class="offer-item-button" href="blank.html">На 350 товаров</a>
           </li>
-          <li>
-            <p></p>
+          <li class="offer-item">
+            <p class="tag-new"></p>
             <h3>Доставка</h3>
-            <a href="blank.html">Бесплатно</a>
+            <a class="offer-item-button" href="blank.html">Бесплатно</a>
           </li>
         </ul>
-        <figure>
+        <figure class="offers-slider">
           <a href="#">
             <img src="https://via.placeholder.com/620x266.png/EE3643/FFFFFF/" width="620" height="266" alt="Перфораторы">
           </a>
-          <figcaption>
+          <figcaption class="offers-slider-title">
             <h4>Перфораторы</h4>
             <p>Настоящие мужские игрушки</p>
           </figcaption>
         </figure>
-        <button type="button" disabled>Назад</button>
-        <button type="button">Вперед</button>
-        <a href="catalog.html">Открыть каталог</a>
+        <button class="offers-slider-button slider-button-back" type="button" disabled>Назад</button>
+        <button class="offers-slider-button slider-button-next" type="button">Вперед</button>
+        <a class="button" href="catalog.html">Открыть каталог</a>
       </section>
-      <section>
+      <section class="popular-items">
         <h2>Популярные товары:</h2>
-        <a href="blank.html">Все популярные товары</a>
-        <ul>
-          <li>
-            <article>
-              <p></p>
-              <p>
+        <a class="button" href="blank.html">Все популярные товары</a>
+        <ul class="popular-items-list">
+          <li class="popular-item">
+            <figure class="item-card">
+              <p class="tag-new"></p>
+              <p class="item-image">
                 <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 9000">
               </p>
-              <h3>Перфоратор BOSCH BFG 9000</h3>
-              <p>32500 Р.</p>
-              <a href="blank.html">25500 Р.</a>
-            </article>
+              <h3 class="item-title">Перфоратор BOSCH BFG 9000</h3>
+              <p class="item-old-price">32500 Р.</p>
+              <a class="item-button" href="blank.html">25500 Р.</a>
+            </figure>
+            <figcaption class="item-options">
+              <a class="option-buy" href="blank.html">Купить</a>
+              <a class="option-bookmark" href="blank.html">В закладки</a>
+            </figcaption>
           </li>
-          <li>
-            <article>
-              <p>new</p>
-              <p>
+          <li class="popular-item">
+            <figure class="item-card">
+              <p class="tag-new">new</p>
+              <p class="item-image">
                 <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
               </p>
-              <h3>Перфоратор BOSCH BFG 3000</h3>
-              <p>22500 Р.</p>
-              <a href="blank.html">15500 Р.</a>
-            </article>
+              <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
+              <p class="item-old-price">22500 Р.</p>
+              <a class="item-button" href="blank.html">15500 Р.</a>
+            </figure>
+            <figcaption class="item-options">
+              <a class="option-buy" href="blank.html">Купить</a>
+              <a class="option-bookmark" href="blank.html">В закладки</a>
+            </figcaption>
           </li>
-          <li>
-            <article>
-              <p></p>
-              <p>
+          <li class="popular-item">
+            <figure class="item-card">
+              <p class="tag-new"></p>
+              <p class="item-image">
                 <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
               </p>
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <p>30500 Р.</p>
-              <a href="blank.html">25500 Р.</a>
-            </article>
+              <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
+              <p class="item-old-price">30500 Р.</p>
+              <a class="item-button" href="blank.html">25500 Р.</a>
+            </figure>
+            <figcaption class="item-options">
+              <a class="option-buy" href="blank.html">Купить</a>
+              <a class="option-bookmark" href="blank.html">В закладки</a>
+            </figcaption>
           </li>
-          <li>
-            <article>
-              <p>new</p>
-              <p>
+          <li class="popular-item">
+            <figure class="popular-card">
+              <p class="tag-new">new</p>
+              <p class="popular-item-image">
                 <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
               </p>
-              <h3>Перфоратор BOSCH BFG 2000</h3>
-              <p></p>
-              <a href="blank.html">12500 Р.</a>
-            </article>
+              <h3 class="popular-item-title">Перфоратор BOSCH BFG 2000</h3>
+              <p class="popular-item-old-price"></p>
+              <a class="popular-item-button" href="blank.html">12500 Р.</a>
+            </figure>
+            <figcaption class="item-options">
+              <a class="option-buy" href="blank.html">Купить</a>
+              <a class="option-bookmark" href="blank.html">В закладки</a>
+            </figcaption>
           </li>
         </ul>
       </section>
-      <section>
+      <section class="popular-brands">
         <h2>Популярные производители:</h2>
-        <a href="blank.html">Все производители</a>
-        <ul>
-          <li>
+        <a class="button" href="blank.html">Все производители</a>
+        <ul class="popular-brands-list">
+          <li class="popular-brand-item">
             <a href="blank.html">
               <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="BOSCH">
             </a>
           </li>
-          <li>
+          <li class="popular-brand-item">
             <a href="blank.html">
               <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="Makita">
             </a>
           </li>
-          <li>
+          <li class="popular-brand-item">
             <a href="blank.html">
               <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="DeWALT">
             </a>
           </li>
-          <li>
+          <li class="popular-brand-item">
             <a href="blank.html">
               <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="Интерскол">
             </a>
           </li>
-          <li>
+          <li class="popular-brand-item">
             <a href="blank.html">
               <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="Hitachi">
             </a>
           </li>
-          <li>
+          <li class="popular-brand-item">
             <a href="blank.html">
               <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="LG">
             </a>
           </li>
-          <li>
+          <li class="popular-brand-item">
             <a href="blank.html">
               <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="AEG">
             </a>
           </li>
-          <li>
+          <li class="popular-brand-item">
             <a href="blank.html">
               <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="Metabo">
             </a>
           </li>
         </ul>
       </section>
-      <section>
+      <section class="services">
         <h2>Сервисы</h2>
-        <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        <ul>
-          <li><button type="button">Доставка</button></li>
-          <li><button type="button">Гарантия</button></li>
-          <li><button type="button">Кредит</button></li>
+        <p class="services-info">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        <ul class="services-list">
+          <li class="service-item"><button type="button">Доставка</button></li>
+          <li class="service-item"><button type="button">Гарантия</button></li>
+          <li class="service-item"><button type="button">Кредит</button></li>
         </ul>
-        <section>
+        <section class="delivery">
           <h3>Доставка</h3>
-          <p>Мы с удовольствием доставим ваш товар прямо<br>
+          <p class="delivery-info">Мы с удовольствием доставим ваш товар прямо<br>
           к вашему подъезду совершенно бесплатно!<br>
           Ведь мы неплохо заработаем,<br>
           поднимая его на ваш этаж!</p>
         </section>
       </section>
-      <section>
+      <section class="about">
         <h2>Компания «Техномарт»</h2>
-        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-        <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
-        <ul>
-          <li>Деловые линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
+        <p class="about-company">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p class="about-shipping">Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
+        <ul class="transport-companies-list">
+          <li class="transport-company-item">Деловые линии</li>
+          <li class="transport-company-item">Автотрейдинг</li>
+          <li class="transport-company-item">ЖелДорЭкспедиция</li>
         </ul>
-        <a href="blank.html">Подробнее о компании</a>
+        <a class="button about-button" href="blank.html">Подробнее о компании</a>
       </section>
-      <section>
+      <section class="contacts">
         <h2>Контакты</h2>
-        <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+        <p class="contacts-info">Вы можете забрать товар сами, заехав в наш офис:</p>
         <p>
           <a href="blank.html">
             <img src="https://via.placeholder.com/300x158.png/EE3643/FFFFFF/" width="300" height="158" alt="Карта">
           </a>
         </p>
-        <a href="blank.html">Заблудились? Напишите нам!</a>
+        <a class="button contacts-button" href="blank.html">Заблудились? Напишите нам!</a>
       </section>
     </main>
-    <footer>
-      <section>
+    <footer class="page-footer main-footer">
+      <section class="footer-contacts">
         <h2>Как нас найти</h2>
-        <a>
+        <a class="main-footer-logo">
           <img src="https://via.placeholder.com/220x68.png/EE3643/FFFFFF/" width="220" height="68" alt="Логотип магазина «Техномарт»">
         </a>
         <p>
           г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+          <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
         </p>
       </section>
-      <section>
+      <section class="footer-navigation">
         <h2>Навигационные ссылки</h2>
-        <ul>
+        <ul class="footer-navigation-links">
           <li><a href="blank.html">Компания</a></li>
           <li><a href="blank.html">Новости</a></li>
           <li><a href="catalog.html">Каталог</a></li>
@@ -240,39 +256,39 @@
           <li><a href="blank.html">Контакты</a></li>
         </ul>
       </section>
-      <section>
+      <section class="footer-promo">
         <h2>Промо-ссылки</h2>
-        <ul>
+        <ul class="footer-promo-links">
           <li><a href="blank.html">Материалы</a></li>
           <li><a href="blank.html">Техника</a></li>
           <li><a href="blank.html">Инструмент</a></li>
           <li><a href="blank.html">Спецпредложения</a></li>
         </ul>
       </section>
-      <section>
+      <section class="footer-copyright">
         <h2>Авторские права</h2>
         <p>© 2010–2019 Компания «Техномарт»<br>
           Все права защищены</p>
       </section>
-      <section>
+      <section class="footer-social">
         <h2>Социальные сети</h2>
         <ul>
           <li>
-            <a href="#">Вконтакте</a>
+            <a class="social-button" href="#">Вконтакте</a>
           </li>
           <li>
-            <a href="#">Фейсбук</a>
+            <a class="social-button" href="#">Фейсбук</a>
           </li>
           <li>
-            <a href="#">Инстаграм</a>
+            <a class="social-button" href="#">Инстаграм</a>
           </li>
         </ul>
       </section>
-      <p>
+      <p class="footer-feedback">
         Обратная связь:
         <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
       </p>
-      <p>
+      <p class="footer-developers">
         Разработано —
         <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
       </p>
