Добавлена стилизация текста и фоновых цветов шапки

--- a/index.html
+++ b/index.html
@@ -10,28 +10,32 @@
   </head>
   <body class="page-body">
     <header class="main-header">
-      <a class="main-header-logo">
-        <img src="https://via.placeholder.com/108x18.png/EE3643/FFFFFF/" width="108" height="18" alt="Логотип магазина «Техномарт»">
-      </a>
-      <!-- Здесь будет форма/инпут поиска -->
-      <a class="bookmark-link" href="blank.html">Закладки: 0</a>
-      <a class="cart-link" href="blank.html">Корзина: 0</a>
-      <a class="order-link" href="blank.html">Оформить заказ</a>
+      <div class="user-navigation">
+        <a class="main-header-logo">
+          <img src="https://via.placeholder.com/108x18.png/EE3643/FFFFFF/" width="108" height="18" alt="Логотип магазина «Техномарт»">
+        </a>
+        <!-- Здесь будет форма/инпут поиска -->
+        <a class="bookmark-link" href="blank.html">Закладки: 0</a>
+        <a class="cart-link" href="blank.html">Корзина: 0</a>
+        <a class="order-link" href="blank.html">Оформить заказ</a>
+      </div>
       <section class="main-header-about">
-        <h2>О нас</h2>
+        <h2 class="visually-hidden">О нас</h2>
         <i>Интернет-магазин<br>
           строительных материалов<br>
           и инструментов для ремонта</i>
       </section>
       <section class="main-header-contacts">
-        <h2>Контактная информация</h2>
+        <h2 class="visually-hidden">Контактная информация</h2>
         <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
         <p>г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
       </section>
       <section class="main-header-account">
-        <h2>Личный кабинет</h2>
-        <a class="login-link" href="blank.html">Войти</a>
-        <a class="register-link" href="blank.html">Регистрация</a>
+        <h2 class="visually-hidden">Личный кабинет</h2>
+        <div class="authorization-container">
+          <a class="login-link" href="blank.html">Войти</a>
+          <a class="register-link" href="blank.html">Регистрация</a>
+        </div>
       </section>
       <nav class="main-navigation">
         <ul class="page-navigation">
