Добавлена базовая стилизация раздела с предложениями

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       </nav>
     </header>
     <main class="container">
-      <h1>Интернет-магазин «Техномарт»</h1>
+      <h1 class="visually-hidden">Интернет-магазин «Техномарт»</h1>
       <section class="offers">
-        <h2>Предложения</h2>
+        <h2 class="visually-hidden">Предложения</h2>
         <ul class="offers-list">
           <li class="offer-item">
             <p class="tag-new">new</p>
