Добавлена стилизация блоков популярных товаров и производителей

--- a/index.html
+++ b/index.html
@@ -94,65 +94,75 @@
         <a class="button" href="catalog.html">Открыть каталог</a>
       </section>
       <section class="popular-items">
-        <h2>Популярные товары:</h2>
-        <a class="button" href="blank.html">Все популярные товары</a>
+        <div class="popular-items-container">
+          <h2>Популярные товары:</h2>
+          <a class="button" href="blank.html">Все популярные товары</a>
+        </div>
         <ul class="popular-items-list">
           <li class="popular-item">
-            <figure class="item-card">
+            <figure class="popular-item-card">
               <p class="tag-new"></p>
-              <p class="item-image">
+              <p class="popular-item-image">
                 <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 9000">
               </p>
-              <h3 class="item-title">Перфоратор BOSCH BFG 9000</h3>
-              <p class="item-old-price">32500 Р.</p>
-              <a class="item-button" href="blank.html">25500 Р.</a>
+              <h3 class="popular-item-title">Перфоратор BOSCH BFG 9000</h3>
+              <div class="price-container">
+                <p class="popular-item-old-price">32500 Р.</p>
+                <a class="popular-item-button" href="blank.html">25500 Р.</a>
+              </div>
             </figure>
-            <figcaption class="item-options">
+            <figcaption class="popular-item-options">
               <a class="option-buy" href="blank.html">Купить</a>
               <a class="option-bookmark" href="blank.html">В закладки</a>
             </figcaption>
           </li>
           <li class="popular-item">
-            <figure class="item-card">
+            <figure class="popular-item-card">
               <p class="tag-new">new</p>
-              <p class="item-image">
+              <p class="popular-item-image">
                 <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
               </p>
-              <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
-              <p class="item-old-price">22500 Р.</p>
-              <a class="item-button" href="blank.html">15500 Р.</a>
+              <h3 class="popular-item-title">Перфоратор BOSCH BFG 3000</h3>
+              <div class="price-container">
+                <p class="popular-item-old-price">22500 Р.</p>
+                <a class="popular-item-button" href="blank.html">15500 Р.</a>
+              </div>
             </figure>
-            <figcaption class="item-options">
+            <figcaption class="popular-item-options">
               <a class="option-buy" href="blank.html">Купить</a>
               <a class="option-bookmark" href="blank.html">В закладки</a>
             </figcaption>
           </li>
           <li class="popular-item">
-            <figure class="item-card">
+            <figure class="popular-item-card">
               <p class="tag-new"></p>
-              <p class="item-image">
+              <p class="popular-item-image">
                 <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
               </p>
-              <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
-              <p class="item-old-price">30500 Р.</p>
-              <a class="item-button" href="blank.html">25500 Р.</a>
+              <h3 class="popular-item-title">Перфоратор BOSCH BFG 6000</h3>
+              <div class="price-container">
+                <p class="popular-item-old-price">30500 Р.</p>
+                <a class="popular-item-button" href="blank.html">25500 Р.</a>
+              </div>
             </figure>
-            <figcaption class="item-options">
+            <figcaption class="popular-item-options">
               <a class="option-buy" href="blank.html">Купить</a>
               <a class="option-bookmark" href="blank.html">В закладки</a>
             </figcaption>
           </li>
           <li class="popular-item">
-            <figure class="popular-card">
+            <figure class="popular-item-card">
               <p class="tag-new">new</p>
               <p class="popular-item-image">
                 <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
               </p>
               <h3 class="popular-item-title">Перфоратор BOSCH BFG 2000</h3>
-              <p class="popular-item-old-price"></p>
-              <a class="popular-item-button" href="blank.html">12500 Р.</a>
+              <div class="price-container">
+                <p class="popular-item-old-price"></p>
+                <a class="popular-item-button" href="blank.html">12500 Р.</a>
+              </div>
             </figure>
-            <figcaption class="item-options">
+            <figcaption class="popular-item-options">
               <a class="option-buy" href="blank.html">Купить</a>
               <a class="option-bookmark" href="blank.html">В закладки</a>
             </figcaption>
@@ -160,8 +170,10 @@
         </ul>
       </section>
       <section class="popular-brands">
-        <h2>Популярные производители:</h2>
-        <a class="button" href="blank.html">Все производители</a>
+        <div class="popular-brands-container">
+          <h2>Популярные производители:</h2>
+          <a class="button" href="blank.html">Все производители</a>
+        </div>
         <ul class="popular-brands-list">
           <li class="popular-brand-item">
             <a href="blank.html">
