Закончена базовая стилизация главной части страницы

--- a/index.html
+++ b/index.html
@@ -220,40 +220,44 @@
       <section class="services">
         <h2>Сервисы</h2>
         <p class="services-info">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        <ul class="services-list">
-          <li class="service-item"><button type="button">Доставка</button></li>
-          <li class="service-item"><button type="button">Гарантия</button></li>
-          <li class="service-item"><button type="button">Кредит</button></li>
-        </ul>
-        <section class="delivery">
-          <h3>Доставка</h3>
-          <p class="delivery-info">Мы с удовольствием доставим ваш товар прямо<br>
-          к вашему подъезду совершенно бесплатно!<br>
-          Ведь мы неплохо заработаем,<br>
-          поднимая его на ваш этаж!</p>
+        <div class="services-description">
+          <ul class="services-list">
+            <li class="service-item"><button class="service-button" type="button" disabled>Доставка</button></li>
+            <li class="service-item"><button class="service-button" type="button">Гарантия</button></li>
+            <li class="service-item"><button class="service-button" type="button">Кредит</button></li>
+          </ul>
+          <section class="delivery">
+            <h3>Доставка</h3>
+            <p class="delivery-info">Мы с удовольствием доставим ваш товар прямо<br>
+            к вашему подъезду совершенно бесплатно!<br>
+            Ведь мы неплохо заработаем,<br>
+            поднимая его на ваш этаж!</p>
+          </section>
+        </div>
+      </section>
+      <div class="index-columns">
+        <section class="about">
+          <h2>Компания «Техномарт»</h2>
+          <p class="about-company">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+          <p class="about-shipping">Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
+          <ul class="transport-companies-list">
+            <li class="transport-company-item">Деловые линии</li>
+            <li class="transport-company-item">Автотрейдинг</li>
+            <li class="transport-company-item">ЖелДорЭкспедиция</li>
+          </ul>
+          <a class="button about-button" href="blank.html">Подробнее о компании</a>
         </section>
-      </section>
-      <section class="about">
-        <h2>Компания «Техномарт»</h2>
-        <p class="about-company">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-        <p class="about-shipping">Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
-        <ul class="transport-companies-list">
-          <li class="transport-company-item">Деловые линии</li>
-          <li class="transport-company-item">Автотрейдинг</li>
-          <li class="transport-company-item">ЖелДорЭкспедиция</li>
-        </ul>
-        <a class="button about-button" href="blank.html">Подробнее о компании</a>
-      </section>
-      <section class="contacts">
-        <h2>Контакты</h2>
-        <p class="contacts-info">Вы можете забрать товар сами, заехав в наш офис:</p>
-        <p>
-          <a href="blank.html">
-            <img src="https://via.placeholder.com/300x158.png/EE3643/FFFFFF/" width="300" height="158" alt="Карта">
-          </a>
-        </p>
-        <a class="button contacts-button" href="blank.html">Заблудились? Напишите нам!</a>
-      </section>
+        <section class="contacts">
+          <h2>Контакты</h2>
+          <p class="contacts-info">Вы можете забрать товар сами, заехав в наш офис:</p>
+          <p>
+            <a href="blank.html">
+              <img src="https://via.placeholder.com/300x158.png/EE3643/FFFFFF/" width="300" height="158" alt="Карта">
+            </a>
+          </p>
+          <a class="button contacts-button" href="blank.html">Заблудились? Напишите нам!</a>
+        </section>
+      </div>
     </main>
     <footer class="page-footer main-footer">
       <section class="footer-contacts">
