--- a/index.html
+++ b/index.html
@@ -260,62 +260,66 @@
       </div>
     </main>
     <footer class="page-footer main-footer">
-      <section class="footer-contacts">
-        <h2>Как нас найти</h2>
-        <a class="main-footer-logo">
-          <img src="https://via.placeholder.com/220x68.png/EE3643/FFFFFF/" width="220" height="68" alt="Логотип магазина «Техномарт»">
-        </a>
-        <p>
-          г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+      <div class="footer-info-container">
+        <section class="footer-contacts">
+          <h2 class="visually-hidden">Как нас найти</h2>
+          <a class="main-footer-logo">
+            <img src="https://via.placeholder.com/220x68.png/EE3643/FFFFFF/" width="220" height="68" alt="Логотип магазина «Техномарт»">
+          </a>
+          <p>
+            г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+            <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+          </p>
+        </section>
+        <section class="footer-navigation">
+          <h2 class="visually-hidden">Навигационные ссылки</h2>
+          <ul class="footer-navigation-links">
+            <li><a href="blank.html">Компания</a></li>
+            <li><a href="blank.html">Новости</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="blank.html">Доставка</a></li>
+            <li><a href="blank.html">Контакты</a></li>
+          </ul>
+        </section>
+        <section class="footer-promo">
+          <h2 class="visually-hidden">Промо-ссылки</h2>
+          <ul class="footer-promo-links">
+            <li><a href="blank.html">Материалы</a></li>
+            <li><a href="blank.html">Техника</a></li>
+            <li><a href="blank.html">Инструмент</a></li>
+            <li><a href="blank.html">Спецпредложения</a></li>
+          </ul>
+        </section>
+      </div>
+      <div class="footer-copyright-container">
+        <section class="footer-copyright">
+          <h2 class="visually-hidden">Авторские права</h2>
+          <p>© 2010–2019 Компания «Техномарт»<br>
+            Все права защищены</p>
+        </section>
+        <section class="footer-social">
+          <h2 class="visually-hidden">Социальные сети</h2>
+          <ul>
+            <li>
+              <a class="social-button" href="#">Вконтакте</a>
+            </li>
+            <li>
+              <a class="social-button" href="#">Фейсбук</a>
+            </li>
+            <li>
+              <a class="social-button" href="#">Инстаграм</a>
+            </li>
+          </ul>
+        </section>
+        <p class="footer-feedback">
+          Обратная связь:
+          <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
-      </section>
-      <section class="footer-navigation">
-        <h2>Навигационные ссылки</h2>
-        <ul class="footer-navigation-links">
-          <li><a href="blank.html">Компания</a></li>
-          <li><a href="blank.html">Новости</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="blank.html">Доставка</a></li>
-          <li><a href="blank.html">Контакты</a></li>
-        </ul>
-      </section>
-      <section class="footer-promo">
-        <h2>Промо-ссылки</h2>
-        <ul class="footer-promo-links">
-          <li><a href="blank.html">Материалы</a></li>
-          <li><a href="blank.html">Техника</a></li>
-          <li><a href="blank.html">Инструмент</a></li>
-          <li><a href="blank.html">Спецпредложения</a></li>
-        </ul>
-      </section>
-      <section class="footer-copyright">
-        <h2>Авторские права</h2>
-        <p>© 2010–2019 Компания «Техномарт»<br>
-          Все права защищены</p>
-      </section>
-      <section class="footer-social">
-        <h2>Социальные сети</h2>
-        <ul>
-          <li>
-            <a class="social-button" href="#">Вконтакте</a>
-          </li>
-          <li>
-            <a class="social-button" href="#">Фейсбук</a>
-          </li>
-          <li>
-            <a class="social-button" href="#">Инстаграм</a>
-          </li>
-        </ul>
-      </section>
-      <p class="footer-feedback">
-        Обратная связь:
-        <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-      </p>
-      <p class="footer-developers">
-        Разработано —
-        <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
-      </p>
+        <p class="footer-developers">
+          Разработано —
+          <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+        </p>
+      </div>
     </footer>
   </body>
 </html>
