--- a/catalog.html
+++ b/catalog.html
@@ -71,7 +71,13 @@
       </section>
       <section>
         <h2>Сортировка:</h2>
-        <!-- Здесь будет форма сортировки -->
+        <ul>
+          <li><a href="#">По цене</a></li>
+          <li><a href="#">По типу</a></li>
+          <li><a href="#">По функционалу</a></li>
+          <li><a href="#">По возрастанию</a></li> <!-- тут будет стрелочка -->
+          <li><a href="#">По убыванию</a></li> <!-- и тут будет стрелочка -->
+        </ul>
       </section>
       <section>
         <h2>Список перфораторов</h2>
