Добавлены стили для хлебных крошек и главного заголовка каталога

--- a/catalog.html
+++ b/catalog.html
@@ -55,9 +55,9 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <ul>
-        <li>
+    <main class="page-catalog container">
+      <ul class="breadcrumbs">
+        <li class="breadcrumbs-index">
           <a href="index.html">Главная</a>
         </li>
         <li>
@@ -66,11 +66,11 @@
         <li>
           <a href="blank.html">Инструмент</a>
         </li>
-        <li>
+        <li class="breadcrumbs-current">
           Перфораторы
         </li>
       </ul>
-      <h1>Перфораторы</h1>
+      <h1 class="page-title">Перфораторы</h1>
       <section>
         <h2>Фильтр:</h2>
         <!-- Здесь будет форма фильтра -->
