--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </ul>
       </nav>
     </header>
-    <main class="container">
+    <main class="page-index container">
       <h1 class="visually-hidden">Интернет-магазин «Техномарт»</h1>
       <section class="offers">
         <h2 class="visually-hidden">Предложения</h2>
