Добавлена базовая стилизация пагинации

--- a/catalog.html
+++ b/catalog.html
@@ -38,8 +38,8 @@
             <a class="logout-link" href="blank.html">Выйти</a>
           </div>
           <ul class="profile-links">
-            <li><a class="profile-link" href="blank.html">Мои заказы</a></li>
-            <li><a class="profile-link" href="blank.html">Личный кабинет</a></li>
+            <li class="profile-link-item"><a href="blank.html">Мои заказы</a></li>
+            <li class="profile-link-item"><a href="blank.html">Личный кабинет</a></li>
           </ul>
         </div>
       </section>
@@ -241,17 +241,17 @@
               <a class="option-bookmark" href="blank.html">В закладки</a>
             </figcaption>
           </li>
-        <ul>
-          <li>
+        <ul class="pagination-list">
+          <li class="pagination-item pagination-item-current">
             <a>1</a>
           </li>
-          <li>
+          <li class="pagination-item">
             <a href="#">2</a>
           </li>
-          <li>
+          <li class="pagination-item">
             <a href="#">3</a>
           </li>
-          <li>
+          <li class="pagination-item">
             <a href="#">Следующая</a>
           </li>
         </ul>
