Добавлены контентные изображения для главной страницы
Немного исправлен альтернативный текст

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     <header class="main-header">
       <div class="user-navigation">
         <a class="main-header-logo" href="index.html">
-          <img src="https://via.placeholder.com/108x18.png/EE3643/FFFFFF/" width="108" height="18" alt="Логотип магазина «Техномарт»">
+          <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип магазина «Техномарт»">
         </a>
         <!-- Здесь будет форма/инпут поиска -->
         <a class="bookmark-link" href="blank.html">Закладки: 0</a>
