--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="main-header">
       <div class="user-navigation">
         <a class="main-header-logo">
-          <img src="https://via.placeholder.com/108x18.png/EE3643/FFFFFF/" width="108" height="18" alt="Логотип магазина «Техномарт»">
+          <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
         </a>
         <!-- Здесь будет форма/инпут поиска -->
         <a class="bookmark-link" href="blank.html">Закладки: 0</a>
@@ -82,7 +82,7 @@
         </ul>
         <figure class="offers-slider">
           <a href="#">
-            <img src="https://via.placeholder.com/620x266.png/EE3643/FFFFFF/" width="620" height="266" alt="Перфораторы">
+            <img src="img/slider-rotary-hammer.jpg" width="620" height="266" alt="Рабочий с перфоратором BOSCH">
           </a>
           <figcaption class="offers-slider-title">
             <h4>Перфораторы</h4>
@@ -103,7 +103,7 @@
             <figure class="popular-item-card">
               <p class="tag-new"></p>
               <p class="popular-item-image">
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 9000">
+                <img src="img/item-bosch-bfg9000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
               </p>
               <h3 class="popular-item-title">Перфоратор BOSCH BFG 9000</h3>
               <div class="price-container">
@@ -120,7 +120,7 @@
             <figure class="popular-item-card">
               <p class="tag-new">new</p>
               <p class="popular-item-image">
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+                <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
               </p>
               <h3 class="popular-item-title">Перфоратор BOSCH BFG 3000</h3>
               <div class="price-container">
@@ -137,7 +137,7 @@
             <figure class="popular-item-card">
               <p class="tag-new"></p>
               <p class="popular-item-image">
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
               </p>
               <h3 class="popular-item-title">Перфоратор BOSCH BFG 6000</h3>
               <div class="price-container">
@@ -154,7 +154,7 @@
             <figure class="popular-item-card">
               <p class="tag-new">new</p>
               <p class="popular-item-image">
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+                <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
               </p>
               <h3 class="popular-item-title">Перфоратор BOSCH BFG 2000</h3>
               <div class="price-container">
@@ -177,42 +177,42 @@
         <ul class="popular-brands-list">
           <li class="popular-brand-item">
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="BOSCH">
+              <img src="img/brand-bosch.png" width="126" height="37" alt="Логотип производителя BOSCH">
             </a>
           </li>
           <li class="popular-brand-item">
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="Makita">
+              <img src="img/brand-makita.png" width="123" height="40" alt="Логотип производителя Makita">
             </a>
           </li>
           <li class="popular-brand-item">
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="DeWALT">
+              <img src="img/brand-dewalt.png" width="146" height="44" alt="Логотип производителя DeWALT">
             </a>
           </li>
           <li class="popular-brand-item">
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="Интерскол">
+              <img src="img/brand-interskol.png" width="200" height="76" alt="Логотип производителя Интерскол">
             </a>
           </li>
           <li class="popular-brand-item">
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="Hitachi">
+              <img src="img/brand-hitachi.png" width="169" height="31" alt="Логотип производителя Hitachi">
             </a>
           </li>
           <li class="popular-brand-item">
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="LG">
+              <img src="img/brand-lg.png" width="121" height="73" alt="Логотип производителя LG">
             </a>
           </li>
           <li class="popular-brand-item">
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="AEG">
+              <img src="img/brand-aeg.png" width="151" height="96" alt="Логотип производителя AEG">
             </a>
           </li>
           <li class="popular-brand-item">
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145.png/EE3643/FFFFFF/" width="220" height="145" alt="Metabo">
+              <img src="img/brand-metabo.png" width="204" height="69" alt="Логотип производителя Metabo">
             </a>
           </li>
         </ul>
@@ -252,7 +252,7 @@
           <p class="contacts-info">Вы можете забрать товар сами, заехав в наш офис:</p>
           <p>
             <a href="blank.html">
-              <img src="https://via.placeholder.com/300x158.png/EE3643/FFFFFF/" width="300" height="158" alt="Карта">
+              <img src="img/map-small.png" width="300" height="158" alt="Карта офиса по адресу г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
             </a>
           </p>
           <a class="button contacts-button" href="blank.html">Заблудились? Напишите нам!</a>
@@ -264,7 +264,7 @@
         <section class="footer-contacts">
           <h2 class="visually-hidden">Как нас найти</h2>
           <a class="main-footer-logo">
-            <img src="https://via.placeholder.com/220x68.png/EE3643/FFFFFF/" width="220" height="68" alt="Логотип магазина «Техномарт»">
+            <img src="img/logo-technomart-footer.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»">
           </a>
           <p>
             г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
